import type {
  WorkItemSummary,
  RunSummary,
  ApprovalSummary,
  EvidenceEntry,
  WorkforceMemberSummary,
  WorkforceQueueSummary,
  AgentV1,
  CredentialGrantV1,
  Plan,
} from '@portarium/cockpit-types'
import type {
  RobotSummary,
  MissionSummary,
  SafetyConstraint,
  ApprovalThreshold,
  EStopAuditEntry,
} from '@/types/robotics'

export type { RobotSummary, MissionSummary, SafetyConstraint, ApprovalThreshold, EStopAuditEntry }

export const WORK_ITEMS: WorkItemSummary[] = [
  {
    schemaVersion: 1,
    workItemId: 'wi-1001',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-20T00:10:00Z',
    createdByUserId: 'user-ops-alex',
    title: 'Invoice mismatch: requires remediation approval',
    status: 'Open',
    ownerUserId: 'user-ops-alex',
    sla: { dueAtIso: '2026-02-21T12:00:00Z' },
    links: {
      externalRefs: [
        {
          sorName: 'Odoo',
          portFamily: 'FinanceAccounting',
          externalId: '42',
          externalType: 'res.partner',
          displayLabel: 'Supplier: ACME Repairs',
        },
      ],
      runIds: ['run-2001'],
      approvalIds: ['apr-3001'],
    },
  },
  {
    schemaVersion: 1,
    workItemId: 'wi-1002',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-19T15:00:00Z',
    createdByUserId: 'user-ops-sam',
    title: 'Onboard new employee: Maria Santos (HRIS sync)',
    status: 'Open',
    ownerUserId: 'user-ops-sam',
    sla: { dueAtIso: '2026-02-22T09:00:00Z' },
    links: {
      externalRefs: [
        {
          sorName: 'BambooHR',
          portFamily: 'HrisHcm',
          externalId: '501',
          externalType: 'employee',
          displayLabel: 'Maria Santos',
        },
      ],
      runIds: ['run-2002'],
    },
  },
  {
    schemaVersion: 1,
    workItemId: 'wi-1003',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-19T11:30:00Z',
    createdByUserId: 'user-ops-alex',
    title: 'CRM lead deduplication batch — Q1 cleanup',
    status: 'Open',
    links: {
      externalRefs: [
        {
          sorName: 'Salesforce',
          portFamily: 'CrmSales',
          externalId: 'batch-cln-001',
          externalType: 'batch',
          displayLabel: 'Q1 Dedup Batch',
        },
      ],
    },
  },
  {
    schemaVersion: 1,
    workItemId: 'wi-1004',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-18T09:00:00Z',
    createdByUserId: 'user-admin',
    title: 'Stripe payout reconciliation — 2026-02-17',
    status: 'Closed',
    ownerUserId: 'user-ops-alex',
    links: {
      runIds: ['run-2003'],
      evidenceIds: ['evd-4001', 'evd-4002'],
    },
  },
  {
    schemaVersion: 1,
    workItemId: 'wi-1005',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-17T14:20:00Z',
    createdByUserId: 'user-ops-sam',
    title: 'IAM access review: Finance team Q1',
    status: 'Open',
    ownerUserId: 'user-approver-dana',
    sla: { dueAtIso: '2026-02-28T17:00:00Z' },
    links: {
      approvalIds: ['apr-3002'],
    },
  },
  {
    schemaVersion: 1,
    workItemId: 'wi-1006',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-16T08:00:00Z',
    createdByUserId: 'user-admin',
    title: 'Compliance policy refresh — SOC 2 CC6.1',
    status: 'Closed',
    ownerUserId: 'user-approver-dana',
  },
]

export const RUNS: RunSummary[] = [
  {
    schemaVersion: 1,
    runId: 'run-2001',
    workspaceId: 'ws-demo',
    workflowId: 'wf-invoice-remediation',
    correlationId: 'cor-wi-1001',
    executionTier: 'HumanApprove',
    initiatedByUserId: 'user-ops-alex',
    status: 'WaitingForApproval',
    createdAtIso: '2026-02-20T00:12:00Z',
    startedAtIso: '2026-02-20T00:12:05Z',
    agentIds: ['agent-001'],
    workforceMemberIds: ['wfm-001'],
  },
  {
    schemaVersion: 1,
    runId: 'run-2002',
    workspaceId: 'ws-demo',
    workflowId: 'wf-employee-onboarding',
    correlationId: 'cor-wi-1002',
    executionTier: 'Assisted',
    initiatedByUserId: 'user-ops-sam',
    status: 'Running',
    createdAtIso: '2026-02-19T15:05:00Z',
    startedAtIso: '2026-02-19T15:05:10Z',
    agentIds: ['agent-002'],
    robotIds: ['robot-002'],
    workforceMemberIds: ['wfm-003'],
  },
  {
    schemaVersion: 1,
    runId: 'run-2003',
    workspaceId: 'ws-demo',
    workflowId: 'wf-payout-reconciliation',
    correlationId: 'cor-wi-1004',
    executionTier: 'Auto',
    initiatedByUserId: 'system',
    status: 'Succeeded',
    createdAtIso: '2026-02-18T09:10:00Z',
    startedAtIso: '2026-02-18T09:10:05Z',
    endedAtIso: '2026-02-18T09:18:42Z',
    agentIds: ['agent-001'],
    workforceMemberIds: ['wfm-001', 'wfm-002'],
  },
  {
    schemaVersion: 1,
    runId: 'run-2004',
    workspaceId: 'ws-demo',
    workflowId: 'wf-crm-dedup',
    correlationId: 'cor-wi-1003',
    executionTier: 'Auto',
    initiatedByUserId: 'user-ops-alex',
    status: 'Failed',
    createdAtIso: '2026-02-19T11:35:00Z',
    startedAtIso: '2026-02-19T11:35:10Z',
    endedAtIso: '2026-02-19T11:38:55Z',
    agentIds: ['agent-003'],
  },
  {
    schemaVersion: 1,
    runId: 'run-2005',
    workspaceId: 'ws-demo',
    workflowId: 'wf-employee-onboarding',
    correlationId: 'cor-test',
    executionTier: 'ManualOnly',
    initiatedByUserId: 'user-ops-sam',
    status: 'Pending',
    createdAtIso: '2026-02-20T06:00:00Z',
  },
  {
    schemaVersion: 1,
    runId: 'run-2006',
    workspaceId: 'ws-demo',
    workflowId: 'wf-iam-review',
    correlationId: 'cor-wi-1005',
    executionTier: 'HumanApprove',
    initiatedByUserId: 'user-admin',
    status: 'Paused',
    createdAtIso: '2026-02-17T14:25:00Z',
    startedAtIso: '2026-02-17T14:25:10Z',
  },
  {
    schemaVersion: 1,
    runId: 'run-2007',
    workspaceId: 'ws-demo',
    workflowId: 'wf-invoice-remediation',
    correlationId: 'cor-test-cancel',
    executionTier: 'Assisted',
    initiatedByUserId: 'user-ops-alex',
    status: 'Cancelled',
    createdAtIso: '2026-02-15T10:00:00Z',
    startedAtIso: '2026-02-15T10:00:10Z',
    endedAtIso: '2026-02-15T10:05:00Z',
  },
]

export const APPROVALS: ApprovalSummary[] = [
  {
    schemaVersion: 1,
    approvalId: 'apr-3001',
    workspaceId: 'ws-demo',
    runId: 'run-2001',
    planId: 'plan-5001',
    workItemId: 'wi-1001',
    prompt:
      'Approve remediation of invoice INV-4271: credit note of €1,240 to ACME Repairs and re-issue corrected invoice.',
    status: 'Pending',
    requestedAtIso: '2026-02-20T00:13:00Z',
    requestedByUserId: 'system',
    assigneeUserId: 'user-approver-dana',
    dueAtIso: '2026-02-21T12:00:00Z',
    sodEvaluation: {
      state: 'eligible',
      requestorId: 'system',
      ruleId: 'SOD-FINANCE-001',
      rolesRequired: ['approver', 'admin'],
    },
    policyRule: {
      ruleId: 'FINANCE-APPROVAL-001',
      trigger: 'write:finance AND amount > $1,000',
      tier: 'HumanApprove',
      blastRadius: ['Odoo', '1 record'],
      irreversibility: 'full',
    },
  },
  {
    schemaVersion: 1,
    approvalId: 'apr-3002',
    workspaceId: 'ws-demo',
    runId: 'run-2006',
    planId: 'plan-5002',
    workItemId: 'wi-1005',
    prompt:
      'Approve Q1 IAM access review results: 3 excess permissions to be revoked across Finance team.',
    status: 'Pending',
    requestedAtIso: '2026-02-17T14:30:00Z',
    requestedByUserId: 'system',
    assigneeUserId: 'user-approver-dana',
    dueAtIso: '2026-02-28T17:00:00Z',
    sodEvaluation: {
      state: 'n-of-m',
      requestorId: 'system',
      ruleId: 'SOD-IAM-002',
      rolesRequired: ['approver', 'admin'],
      nRequired: 2,
      nTotal: 3,
      nSoFar: 1,
    },
    policyRule: {
      ruleId: 'IAM-APPROVAL-002',
      trigger: 'write:iam AND access_change',
      tier: 'HumanApprove',
      blastRadius: ['Okta', '3 records'],
      irreversibility: 'partial',
    },
    decisionHistory: [
      {
        timestamp: '2026-02-17T14:30:00Z',
        type: 'requested',
        actor: 'system',
        message: 'Approval requested',
      },
      {
        timestamp: '2026-02-18T09:35:00Z',
        type: 'changes_requested',
        actor: 'user-approver-dana',
        message: 'Changes requested: "Need audit trail for each permission revocation"',
      },
      {
        timestamp: '2026-02-18T10:12:00Z',
        type: 'resubmitted',
        actor: 'system',
        message: 'Plan revised and resubmitted with per-record audit refs',
      },
    ],
  },
  {
    schemaVersion: 1,
    approvalId: 'apr-3003',
    workspaceId: 'ws-demo',
    runId: 'run-2003',
    planId: 'plan-5003',
    prompt: 'Approve Stripe payout reconciliation batch for 2026-02-17.',
    status: 'Approved',
    requestedAtIso: '2026-02-18T09:12:00Z',
    requestedByUserId: 'system',
    assigneeUserId: 'user-approver-dana',
    decidedAtIso: '2026-02-18T09:15:00Z',
    decidedByUserId: 'user-approver-dana',
    rationale: 'Amounts reconcile with bank statement. Proceeding.',
  },
  {
    schemaVersion: 1,
    approvalId: 'apr-3004',
    workspaceId: 'ws-demo',
    runId: 'run-2007',
    planId: 'plan-5004',
    workItemId: 'wi-1007',
    prompt:
      'Approve large supplier payment: €14,200 to Global Parts GmbH against PO-8821. Exceeds auto-approve threshold.',
    status: 'Pending',
    requestedAtIso: '2026-02-20T08:05:00Z',
    requestedByUserId: 'user-approver-dana',
    assigneeUserId: 'user-approver-dana',
    sodEvaluation: {
      state: 'blocked-self',
      requestorId: 'user-approver-dana',
      ruleId: 'SOD-FINANCE-003',
      rolesRequired: ['approver'],
    },
    policyRule: {
      ruleId: 'FINANCE-APPROVAL-003',
      trigger: 'write:finance AND amount > $10,000',
      tier: 'HumanApprove',
      blastRadius: ['Stripe', 'NetSuite', '12 records'],
      irreversibility: 'full',
    },
  },
]

export const PLANS: Plan[] = [
  {
    schemaVersion: 1,
    planId: 'plan-5001',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-20T00:12:30Z',
    createdByUserId: 'system',
    plannedEffects: [
      {
        effectId: 'eff-1',
        operation: 'Create',
        target: { sorName: 'Odoo', portFamily: 'FinanceAccounting', externalId: 'INV-4271C', externalType: 'CreditNote', displayLabel: 'Credit Note INV-4271C' },
        summary: 'Credit note of €1,240 to ACME Repairs',
      },
      {
        effectId: 'eff-2',
        operation: 'Create',
        target: { sorName: 'Odoo', portFamily: 'FinanceAccounting', externalId: 'INV-4272', externalType: 'Invoice', displayLabel: 'Corrected Invoice INV-4272' },
        summary: 'Re-issue corrected invoice',
      },
    ],
  },
  {
    schemaVersion: 1,
    planId: 'plan-5002',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-17T14:28:00Z',
    createdByUserId: 'system',
    plannedEffects: [
      {
        effectId: 'eff-3',
        operation: 'Delete',
        target: { sorName: 'Okta', portFamily: 'IamDirectory', externalId: 'perm-fin-001', externalType: 'GroupMembership', displayLabel: 'Finance:ReadWrite — alice@acme' },
        summary: 'Revoke excess write permission',
      },
      {
        effectId: 'eff-4',
        operation: 'Delete',
        target: { sorName: 'Okta', portFamily: 'IamDirectory', externalId: 'perm-fin-002', externalType: 'GroupMembership', displayLabel: 'Finance:ReadWrite — bob@acme' },
        summary: 'Revoke excess write permission',
      },
      {
        effectId: 'eff-5',
        operation: 'Delete',
        target: { sorName: 'Okta', portFamily: 'IamDirectory', externalId: 'perm-fin-003', externalType: 'GroupMembership', displayLabel: 'Finance:Admin — carol@acme' },
        summary: 'Revoke excess admin permission',
      },
    ],
  },
  {
    schemaVersion: 1,
    planId: 'plan-5003',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-18T09:11:00Z',
    createdByUserId: 'system',
    plannedEffects: [
      {
        effectId: 'eff-6',
        operation: 'Update',
        target: { sorName: 'Stripe', portFamily: 'PaymentsBilling', externalId: 'po_1234567890', externalType: 'Payout', displayLabel: 'Payout 2026-02-17' },
        summary: 'Verify payout reconciliation: 142 transactions matched',
      },
    ],
  },
  {
    schemaVersion: 1,
    planId: 'plan-5004',
    workspaceId: 'ws-demo',
    createdAtIso: '2026-02-20T08:04:00Z',
    createdByUserId: 'system',
    plannedEffects: [
      {
        effectId: 'eff-7',
        operation: 'Create',
        target: { sorName: 'Stripe', portFamily: 'PaymentsBilling', externalId: 'pmt-8821', externalType: 'Transfer', displayLabel: 'Transfer PO-8821' },
        summary: 'Initiate €14,200 supplier payment',
      },
      {
        effectId: 'eff-8',
        operation: 'Update',
        target: { sorName: 'NetSuite', portFamily: 'FinanceAccounting', externalId: 'po-8821', externalType: 'PurchaseOrder', displayLabel: 'PO-8821' },
        summary: 'Mark purchase order as paid',
      },
    ],
  },
]

export const EVIDENCE: EvidenceEntry[] = [
  {
    schemaVersion: 1,
    evidenceId: 'evd-4001',
    workspaceId: 'ws-demo',
    occurredAtIso: '2026-02-18T09:10:05Z',
    category: 'System',
    summary: 'Run run-2003 started by system automation',
    actor: { kind: 'System' },
    links: { runId: 'run-2003', workItemId: 'wi-1004' },
    hashSha256:
      'a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2',
  },
  {
    schemaVersion: 1,
    evidenceId: 'evd-4002',
    workspaceId: 'ws-demo',
    occurredAtIso: '2026-02-18T09:15:00Z',
    category: 'Approval',
    summary: 'Approval apr-3003 decided: Approved by user-approver-dana',
    actor: { kind: 'User', userId: 'user-approver-dana' },
    links: { runId: 'run-2003', workItemId: 'wi-1004' },
    previousHash:
      'a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2',
    hashSha256:
      'b2c3d4e5f6a7b2c3d4e5f6a7b2c3d4e5f6a7b2c3d4e5f6a7b2c3d4e5f6a7b2c3',
  },
  {
    schemaVersion: 1,
    evidenceId: 'evd-4003',
    workspaceId: 'ws-demo',
    occurredAtIso: '2026-02-18T09:18:42Z',
    category: 'Action',
    summary: 'Stripe payout reconciliation completed: 142 transactions matched',
    actor: { kind: 'Adapter', adapterId: 'adapter-stripe-001' },
    links: {
      runId: 'run-2003',
      workItemId: 'wi-1004',
      externalRefs: [
        {
          sorName: 'Stripe',
          portFamily: 'PaymentsBilling',
          externalId: 'po_1234567890',
          externalType: 'payout',
          displayLabel: 'Payout 2026-02-17',
        },
      ],
    },
    previousHash:
      'b2c3d4e5f6a7b2c3d4e5f6a7b2c3d4e5f6a7b2c3d4e5f6a7b2c3d4e5f6a7b2c3',
    hashSha256:
      'c3d4e5f6a7b8c3d4e5f6a7b8c3d4e5f6a7b8c3d4e5f6a7b8c3d4e5f6a7b8c3d4',
  },
  {
    schemaVersion: 1,
    evidenceId: 'evd-4004',
    workspaceId: 'ws-demo',
    occurredAtIso: '2026-02-20T00:12:05Z',
    category: 'Plan',
    summary: 'Plan plan-5001 generated: 2 effects planned for invoice remediation',
    actor: { kind: 'System' },
    links: { runId: 'run-2001', workItemId: 'wi-1001', planId: 'plan-5001' },
    hashSha256:
      'd4e5f6a7b8c9d4e5f6a7b8c9d4e5f6a7b8c9d4e5f6a7b8c9d4e5f6a7b8c9d4e5',
  },
]

export const WORKFORCE_MEMBERS: WorkforceMemberSummary[] = [
  { schemaVersion: 1, workforceMemberId: 'wfm-001', linkedUserId: 'user-approver-dana', displayName: 'Dana Approver', capabilities: ['operations.approval', 'operations.dispatch'], availabilityStatus: 'available', queueMemberships: ['queue-ops-001', 'queue-finance-001'], tenantId: 'tenant-demo', createdAtIso: '2026-01-01T00:00:00Z' },
  { schemaVersion: 1, workforceMemberId: 'wfm-002', linkedUserId: 'user-ops-alex', displayName: 'Alex Ops', capabilities: ['operations.dispatch', 'operations.escalation'], availabilityStatus: 'busy', queueMemberships: ['queue-ops-001'], tenantId: 'tenant-demo', createdAtIso: '2026-01-01T00:00:00Z' },
  { schemaVersion: 1, workforceMemberId: 'wfm-003', linkedUserId: 'user-ops-sam', displayName: 'Sam Operator', capabilities: ['operations.dispatch'], availabilityStatus: 'available', queueMemberships: ['queue-ops-001'], tenantId: 'tenant-demo', createdAtIso: '2026-01-15T00:00:00Z' },
  { schemaVersion: 1, workforceMemberId: 'wfm-004', linkedUserId: 'user-admin', displayName: 'Admin User', capabilities: ['operations.dispatch', 'operations.approval', 'operations.escalation', 'robotics.supervision'], availabilityStatus: 'offline', queueMemberships: ['queue-ops-001', 'queue-finance-001'], tenantId: 'tenant-demo', createdAtIso: '2025-12-01T00:00:00Z' },
]

export const WORKFORCE_QUEUES: WorkforceQueueSummary[] = [
  { schemaVersion: 1, workforceQueueId: 'queue-ops-001', name: 'Operations Queue', requiredCapabilities: ['operations.dispatch'], memberIds: ['wfm-001', 'wfm-002', 'wfm-003', 'wfm-004'], routingStrategy: 'round-robin', tenantId: 'tenant-demo' },
  { schemaVersion: 1, workforceQueueId: 'queue-finance-001', name: 'Finance Approvals Queue', requiredCapabilities: ['operations.approval'], memberIds: ['wfm-001', 'wfm-004'], routingStrategy: 'least-busy', tenantId: 'tenant-demo' },
]

export const AGENTS: AgentV1[] = [
  { schemaVersion: 1, agentId: 'agent-001', workspaceId: 'ws-demo', name: 'Invoice Analyzer', modelId: 'claude-opus-4-6', endpoint: 'https://agents.portarium.io/invoice-analyzer', allowedCapabilities: ['read:external', 'analyze', 'classify'], usedByWorkflowIds: ['wf-invoice-remediation'] },
  { schemaVersion: 1, agentId: 'agent-002', workspaceId: 'ws-demo', name: 'HR Sync Agent', modelId: 'claude-sonnet-4-6', endpoint: 'https://agents.portarium.io/hr-sync', allowedCapabilities: ['read:external', 'write:external', 'generate'], usedByWorkflowIds: ['wf-employee-onboarding'] },
  { schemaVersion: 1, agentId: 'agent-003', workspaceId: 'ws-demo', name: 'CRM Dedup Agent', modelId: 'claude-haiku-4-5-20251001', endpoint: 'https://agents.portarium.io/crm-dedup', allowedCapabilities: ['read:external', 'analyze', 'classify'], usedByWorkflowIds: ['wf-crm-dedup'] },
]

export const ADAPTERS = [
  { adapterId: 'adapter-odoo-001', name: 'Odoo Finance', sorFamily: 'FinanceAccounting', status: 'healthy', lastSyncIso: '2026-02-20T00:00:00Z' },
  { adapterId: 'adapter-stripe-001', name: 'Stripe Payments', sorFamily: 'PaymentsBilling', status: 'healthy', lastSyncIso: '2026-02-20T00:00:00Z' },
  { adapterId: 'adapter-bamboohr-001', name: 'BambooHR HRIS', sorFamily: 'HrisHcm', status: 'healthy', lastSyncIso: '2026-02-19T23:00:00Z' },
  { adapterId: 'adapter-salesforce-001', name: 'Salesforce CRM', sorFamily: 'CrmSales', status: 'degraded', lastSyncIso: '2026-02-19T18:00:00Z' },
]

export const CREDENTIAL_GRANTS: CredentialGrantV1[] = [
  {
    schemaVersion: 1,
    credentialGrantId: 'cg-7001',
    workspaceId: 'ws-demo',
    adapterId: 'adapter-odoo-001',
    credentialsRef: 'vault://ws-demo/finance/odoo-primary',
    scope: 'invoice:read invoice:write',
    issuedAtIso: '2026-02-01T10:00:00Z',
    expiresAtIso: '2026-06-01T00:00:00Z',
  },
  {
    schemaVersion: 1,
    credentialGrantId: 'cg-7002',
    workspaceId: 'ws-demo',
    adapterId: 'adapter-salesforce-001',
    credentialsRef: 'vault://ws-demo/crm/salesforce-api',
    scope: 'party:read opportunity:write',
    issuedAtIso: '2026-01-10T08:00:00Z',
    expiresAtIso: '2026-04-10T00:00:00Z',
  },
  {
    schemaVersion: 1,
    credentialGrantId: 'cg-7003',
    workspaceId: 'ws-demo',
    adapterId: 'adapter-stripe-001',
    credentialsRef: 'vault://ws-demo/payments/stripe-secret-key',
    scope: 'charge:read charge:write refund:write',
    issuedAtIso: '2025-12-01T08:00:00Z',
    expiresAtIso: '2026-01-15T00:00:00Z',
  },
  {
    schemaVersion: 1,
    credentialGrantId: 'cg-7004',
    workspaceId: 'ws-demo',
    adapterId: 'adapter-bamboohr-001',
    credentialsRef: 'vault://ws-demo/hris/bamboohr-token',
    scope: 'employee:read employee:write',
    issuedAtIso: '2026-01-20T08:00:00Z',
    expiresAtIso: '2026-07-20T00:00:00Z',
    revokedAtIso: '2026-02-05T12:30:00Z',
  },
]

// ---------------------------------------------------------------------------
// Robotics fixtures
// ---------------------------------------------------------------------------

export const ROBOTS: RobotSummary[] = [
  {
    robotId: 'robot-001',
    name: 'Rover Alpha',
    robotClass: 'AMR',
    status: 'Online',
    batteryPct: 87,
    lastHeartbeatSec: 2,
    missionId: 'mis-0094',
    gatewayUrl: 'grpc://gw-wh-a.portarium.io:9001',
    spiffeSvid: 'spiffe://portarium.io/robot/robot-001',
    capabilities: ['navigate', 'localize', 'obstacle-avoidance'],
  },
  {
    robotId: 'robot-002',
    name: 'Carrier Beta',
    robotClass: 'AGV',
    status: 'Online',
    batteryPct: 94,
    lastHeartbeatSec: 1,
    missionId: 'mis-0087',
    gatewayUrl: 'grpc://gw-wh-a.portarium.io:9002',
    spiffeSvid: 'spiffe://portarium.io/robot/robot-002',
    capabilities: ['transport', 'dock'],
  },
  {
    robotId: 'robot-003',
    name: 'Arm Gamma',
    robotClass: 'Manipulator',
    status: 'Online',
    batteryPct: 72,
    lastHeartbeatSec: 3,
    missionId: 'mis-0095',
    gatewayUrl: 'grpc://gw-bay3.portarium.io:9003',
    spiffeSvid: 'spiffe://portarium.io/robot/robot-003',
    capabilities: ['pick', 'place', 'grip'],
  },
  {
    robotId: 'robot-004',
    name: 'Drone Delta',
    robotClass: 'UAV',
    status: 'Degraded',
    batteryPct: 12,
    lastHeartbeatSec: 45,
    gatewayUrl: 'grpc://gw-yard.portarium.io:9004',
    spiffeSvid: 'spiffe://portarium.io/robot/robot-004',
    capabilities: ['fly', 'scan', 'photograph'],
  },
  {
    robotId: 'robot-005',
    name: 'Rover Epsilon',
    robotClass: 'AMR',
    status: 'E-Stopped',
    batteryPct: 56,
    lastHeartbeatSec: 8,
    gatewayUrl: 'grpc://gw-wh-a.portarium.io:9005',
    spiffeSvid: 'spiffe://portarium.io/robot/robot-005',
    capabilities: ['navigate', 'localize'],
  },
  {
    robotId: 'robot-006',
    name: 'Conveyor Zeta',
    robotClass: 'PLC',
    status: 'Online',
    batteryPct: 100,
    lastHeartbeatSec: 1,
    missionId: 'mis-0096',
    gatewayUrl: 'grpc://gw-bay3.portarium.io:9006',
    spiffeSvid: 'spiffe://portarium.io/robot/robot-006',
    capabilities: ['conveyor-control', 'sort', 'count'],
  },
  {
    robotId: 'robot-007',
    name: 'Carrier Eta',
    robotClass: 'AGV',
    status: 'Offline',
    batteryPct: 31,
    lastHeartbeatSec: 320,
    gatewayUrl: 'grpc://gw-wh-a.portarium.io:9007',
    spiffeSvid: 'spiffe://portarium.io/robot/robot-007',
    capabilities: ['transport'],
  },
]

export const MISSIONS: MissionSummary[] = [
  {
    missionId: 'mis-0094',
    robotId: 'robot-001',
    goal: 'Navigate to bay 3',
    actionType: 'navigate_to',
    status: 'Executing',
    priority: 'Normal',
    dispatchedAtIso: '2026-02-20T14:02:00Z',
    executionTier: 'Auto',
  },
  {
    missionId: 'mis-0095',
    robotId: 'robot-003',
    goal: 'Pick SKU-8821',
    actionType: 'pick',
    status: 'Pending',
    priority: 'Normal',
    executionTier: 'HumanApprove',
  },
  {
    missionId: 'mis-0087',
    robotId: 'robot-002',
    goal: 'Return to charge station',
    actionType: 'dock',
    status: 'Completed',
    priority: 'Low',
    dispatchedAtIso: '2026-02-20T13:30:00Z',
    completedAtIso: '2026-02-20T13:41:00Z',
    executionTier: 'Auto',
  },
  {
    missionId: 'mis-0091',
    robotId: 'robot-004',
    goal: 'Dock at charging pad',
    actionType: 'dock',
    status: 'Failed',
    priority: 'High',
    dispatchedAtIso: '2026-02-20T12:50:00Z',
    completedAtIso: '2026-02-20T12:55:00Z',
    executionTier: 'Auto',
  },
  {
    missionId: 'mis-0096',
    robotId: 'robot-006',
    goal: 'Sort incoming parcels — batch 42',
    actionType: 'custom',
    status: 'Executing',
    priority: 'Normal',
    dispatchedAtIso: '2026-02-20T13:55:00Z',
    executionTier: 'Auto',
  },
]

export const SAFETY_CONSTRAINTS: SafetyConstraint[] = [
  {
    constraintId: 'sc-001',
    site: 'warehouse-a',
    constraint: 'max_speed ≤ 0.5 m/s',
    enforcement: 'block',
    robotCount: 12,
  },
  {
    constraintId: 'sc-002',
    site: 'bay-3',
    constraint: 'no_lift_zone',
    enforcement: 'warn',
    robotCount: 4,
  },
  {
    constraintId: 'sc-003',
    site: 'yard',
    constraint: 'outdoor_uav_permit required',
    enforcement: 'block',
    robotCount: 6,
  },
]

export const APPROVAL_THRESHOLDS: ApprovalThreshold[] = [
  { actionClass: 'navigate_to', tier: 'Auto', notes: 'Normal environments' },
  { actionClass: 'outdoor_flight', tier: 'HumanApprove', notes: 'Requires safety_admin sign-off' },
  { actionClass: 'pick (>10 kg)', tier: 'HumanApprove', notes: 'Weight threshold gate' },
]

export const ESTOP_AUDIT_LOG: EStopAuditEntry[] = [
  {
    timestamp: '2026-02-18T14:01:00Z',
    actor: 'operator@acme.com',
    robotId: 'robot-007',
    event: 'Sent',
    detail: 'reason: low battery drift',
  },
  {
    timestamp: '2026-02-18T13:55:00Z',
    actor: 'safety_admin',
    robotId: 'robot-007',
    event: 'Cleared',
    detail: 'rationale: charged + verified',
  },
]

export const OBSERVABILITY_DATA = {
  runsOverTime: [
    { date: '2026-02-14', succeeded: 12, failed: 2, waitingForApproval: 1 },
    { date: '2026-02-15', succeeded: 18, failed: 1, waitingForApproval: 2 },
    { date: '2026-02-16', succeeded: 15, failed: 3, waitingForApproval: 1 },
    { date: '2026-02-17', succeeded: 22, failed: 0, waitingForApproval: 3 },
    { date: '2026-02-18', succeeded: 19, failed: 2, waitingForApproval: 2 },
    { date: '2026-02-19', succeeded: 14, failed: 4, waitingForApproval: 1 },
    { date: '2026-02-20', succeeded: 8, failed: 1, waitingForApproval: 2 },
  ],
  successRate: 87,
  avgSlaDays: 1.4,
}
